galeria/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 5574
      targetPort: 80
  type: LoadBalancer
